# ML-Microservice

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  requirements.txt
app/: main.py
app/api/routes/: health.py  predictions.py
app/core/: config.py  exceptions.py  logging.py
app/models/: schemas.py
app/models/ml_models/src/: config.py  pipeline.py
app/models/ml_models/src/core/: evaluate.py  predict.py  train.py
app/models/ml_models/src/features/: data_ingestion.py  preprocessing.py
app/services/: cache_service.py  ml_service.py  prediction_service.py
app/utils/: hash_utils.py
docker/: Dockerfile  docker-compose.yaml
